VirtualGloomhavenBoard/wwwroot/scss/_screens.scss
@media
    // Extra small devices (portrait phones, less than 576px)
    (max-width: 575px),
    // Small devices (landscape phones, 576px and up)
    (max-width: 767px) {
    :root {
        font-size: 0.9rem;
    }

    html {
        .content {
            .header {
                header {
                    font-size: 1.5rem;
                }

                .roomCode {
                    display: none;
                }

                .menu {
                    nav {
                        ul {
                            li {
                                .shortcut {
                                    display: none;
                                }
                            }
                        }
                    }
                }
            }

            .main {
                margin-bottom: 0;

                .action-list {

                    &:not(.show) {
                        left: -17rem;

                        .side-toggle {
                            display: block;
                            right: -10.2rem;
                        }
                    }

                    .side-toggle {
                        display: block;
                    }

                    .new-piece-wrapper {
                        .new-piece-list {
                            ul {
                                li {
                                    transform: scale(0.8);
                                    transform-origin: top;

                                    :first-child {
                                        margin-top: 1rem;
                                    }

                                    &:not(:first-child) {
                                        margin: -1.3rem 0;
                                    }

                                    .summons {
                                        span {
                                            line-height: 3.5rem;
                                        }
                                    }
                                }
                            }
                        }
                    }
                }

                .board-wrapper {
                    margin-left: 0;

                    .map-bg {
                        display: none;
                    }

                    .mapTiles, .board {
                        transform: scale(0.8);
                        transform-origin: top;
                    }
                }

                .action-list.show {
                    & + .board-wrapper {
                        margin-left: 9.2rem;
                    }
                }

                .connectionStatus {
                    width: 75vw;
                    font-size: 1rem;
                    height: 3rem;

                    a {
                        line-height: 1.2rem;
                    }
                }
            }

            footer {
                display: none;
            }
        }

        .overlay-dialog {
            .dialog {
                border: none;
                width: 100vw;
                height: 100vh;
                background-image: radial-gradient(circle, rgba(241, 236, 232, 0.3) 31%, rgba(156, 124, 108, 0.4) 85%, rgba(81, 64, 30, 0.3) 100%), url("/img/bg.jpg");
                display: flex;
                align-items: center;
                overflow-x: scroll;
                padding: 1.2rem;

                & > div {
                    width: 100%;
                }

                .character-form {
                    width: 100%;
                    padding: 0;
                    justify-content: center;

                    .button-wrapper {
                        width: 100%;
                    }
                }
            }
        }
    }
 }


// Medium devices (tablets, 768px and up)
@media (max-width: 991px) {

}

// 4k+
@media (min-width: 2800px) {
    :root {
        font-size: 1.5rem;
    }

    html {
        .content {
            .header {
                .menu {
                    &:before {
                        transform: scale(1.5);
                        transform-origin: top;
                    }
                }
            }

            .main {
                .action-list {
                    width: 6.2rem;
                    transform: scale(1.25);
                    transform-origin: top left;
                }

                .board-wrapper {
                    margin-left: 8rem;
                    transform: scale(1.25);
                    transform-origin: top left;
                }
            }

            footer {
                .pkg {
                    .copy-wrapper {
                        .sponsor {
                            .sponsor-button {
                                transform: scale(0.85);
                            }
                        }
                    }

                    .version {
                        a {
                            margin-right: 7.6rem;
                        }
                    }
                }
            }
        }

        .summons {
            span {
                font-size: 0.75rem;
            }
        }

        .monster {
            span {
                font-size: 0.75rem;
            }
        }
    }
}

